# webmenu

./: .gitignore  .huskyrc  .releaserc  .releaserc.json  Cargo.toml  PKGBUILD  README.md  package.json  rollup.config.js  tailwind.config.js  twitter.html
.github/actions/hello/: package.json
.github/actions/release/: action.yml  index.js  index.js~Stashed changes  package.json
.github/workflows/: build-master.yml  build.yml  release.yml  test.yml
examples/ddgr-search/: README.md  ddgr-renderer.js  ddgr-search
examples/ddgr-search/ddgr-renderer/: Cargo.toml
examples/ddgr-search/ddgr-renderer/src/: main.rs
examples/ddgr-search/ddgr-renderer/templates/: list.html
examples/youtube-search/: youtube-json-renderer.js  youtube-search
frontend/: App.svelte
public/: global.css
scripts/: ddgr  youtube-search
scripts/js/: simplify-youtube-json.js
scripts/rs/simplify-youtube-json/: Cargo.toml
scripts/rs/youtube-json-renderer/: Cargo.toml
src/: App.svelte  main.js  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cmd.rs  main.rs
