[package]
name = "webmenu"
version = "1.1.2"
edition = "2018"

[dependencies]
actix-cors = "0.5.4"
actix-rt = "2.0.2"
actix-web = "3.3.2"
clap = "2.33.3"
futures = "0.3.12"
mime_guess = "2.0.3"
rust-embed = "5.9.0"
serde = "1.0.123"
web-view = "0.7.2"
x11 = { version = "2.18.2", features = ["xlib"] }
