[package]
name = "webmenu"
version = "0.1.3"
description = "A Tauri App"
authors = [ "you" ]
license = "GPL-3.0-only"
repository = "https://github.com/wbunting/webmenu"
homepage = "https://github.com/wbunting/webmenu"
default-run = "webmenu"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { git = "https://github.com/tauri-apps/tauri", rev = "82eba22", features = [ "all-api", "cli" ] }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "webmenu"
path = "src/main.rs"
