[package]
name = "ddgr-renderer"
version = "0.1.0"
authors = ["wbunting <bunting.will@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.123"
serde_json = "1.0.61"
tera = "1.6.1"
lazy_static = "1.4.0"
schemars = "0.8.0"
